<resources>
    <string name="app_name">StudyApp</string>
    <string name="mainmenu_title">K先生</string>
    <string name="mainmenu_prepare">予習</string>
    <string name="mainmenu_review">復習</string>
    <string name="review_title">復習</string>
    <string name="prepare_title">予習</string>
    <string name="add_review">+</string>
    <string name="instruction_add">新規の間違いタイプを入れましょう</string>
    <string name="hint_add">間違いタイプ</string>
    <string name="OK_add">OK</string>
    <string name="OK_add_prepare">OK</string>
    <string name="add_prepare">+</string>
    <string name="title_prepare_add">Title</string>
    <string name="time_prepare_add">Time</string>
    <string name="TIME_view_prepare">TIME!</string>
    <string name="cancel_timer">CANCEL</string>
    <string name="PRINT_view_prepare">PRINT</string>
    <string name="TITECH">東工大</string>
    <string name="PASS">合格!!!</string>
</resources>
