<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mainmenu_title"
        app:layout_constraintBottom_toTopOf="@id/Prepare"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        android:id="@+id/Prepare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mainmenu_prepare"
        app:layout_constraintBottom_toTopOf="@id/Review"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Title"
        />

    <Button
        android:id="@+id/Review"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mainmenu_review"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Prepare"
        />

</android.support.constraint.ConstraintLayout>